styles.css
body {
    font-family: 'Courier New', Courier, monospace;
    padding: 100px 0 0 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    color: #f8f8f2;
    background-color: #282a36;
    align-items: center;

}

header {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    background-color: inherit;
    z-index: 1;
}



.darkMode {
    color: #44475a;
    background-color: #f8f8f2;
}

li {
    list-style-type: none;
}



.sorts {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    padding: 30px;
    flex-wrap: wrap;
}

.sorts button {
    border: 5px solid #ff79c6;
    width: 250px;
    font-family: inherit;
    font-weight: 900;
    font-size: 20px;
    background-color: transparent;
    color: inherit;
    border-radius: 15px;
    padding: 10px 10px;
}

.sorts button:active {
    transform: translateY(4px);
    border-color: #50fa7b;
}




.hero {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0;
    /* height: 100vh; */
    padding: 0 10px;
}



.barArea {
    display: flex;
    justify-content: center;
    padding: 0 50px;
    gap: 20px;
    flex-wrap: wrap;
}

.barAreaListView {
    display: flex;
    flex-direction: column;
    width: 70%;
}







.progress {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 300px;
    padding: 20px 20px;
    margin-bottom: 50px;
    border: 5px solid #44475a;
    border-radius: 15px;
}

.progressLength {

    padding: 0;
    margin: 0;
    border: none;
    width: 100%;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
}




.coinInfo {
    display: flex;
    justify-content: space-between;
    /* flex-wrap: wrap; */
}

.iconAndName {
    display: flex;
    align-items: center;
    /* width: 200px; */
}

.coinIcon {
    width: 30px;
    height: 30px;
    border-radius: 50%;
}

.iconAndName h2 {
    margin-left: 10px;
    font-size: 20px;
}

.moreText {
    text-align: end;
    font-size: 20px;
}

.currentPrice,
.percent {
    margin: 0;
    font-weight: 900;
    text-align: right;
}

.currentPrice {
    font-size: 20px;
    color: #ff79c6;
}

.percent {
    font-size: 16px;
}

.athOnStatusBar {
    font-size: 18px;
    font-weight: 900;
    text-align: right;
    margin: 0 0 5px 0;
    color: #bd93f9;
}



.statusBar {
    position: relative;
    height: 15px;
    width: 100%;
    background-color: transparent;
    border-radius: 25px;
    border: 3px solid #bd93f9
}




@keyframes growFromLeft {
    0% {
        transform: scaleX(0);
    }

    100% {
        transform: scaleX(1);
    }
}

.status-bar-fill {
    transform-origin: 0% 50%;
    transform: cubic-bezier(.32, 0, .07, 1);
    animation: 0.69s growFromLeft;
    position: absolute;
    height: 100%;
    background-color: #bd93f9;
    border-radius: 25px;

}


#logo {
    border: 10px solid #bd93f9;
    border-radius: 25px;
    box-shadow: 0 0 10px 5px #f8f8f2;

}


.logo-rotate {
    transform: rotate(180deg);
}



#logo:active {
    transform: translateY(4px);
    border: 10px solid #ff79c6;

}




footer {
    text-align: center;
    padding: 10px;
}




a {
    /* text-decoration: none; */
    color: inherit;
}

